# Halva

./: Cargo.toml  Main.lean  README.md  fibo.lean  out.txt  range_check.lean  rc.lean  table.lean  two-chip.lean
examples/: bytecode.rs  cond-swap.rs  decompose-running-sum.rs  fib-ex1.rs  fib-ex2.rs  fib-ex3.rs  fib-ex4-not-done.rs  fibo-table.rs  fibonacci.rs  layout.rs  lookup-range-check.rs  lookup.rs  range-check.rs  range_check.rs  rc.rs  scroll-batched-is-zero.rs  scroll-binary-number.rs  scroll-keccak.rs  shuffle.rs  table.rs  table2.rs  two-chip.rs
examples-privacy-scaling-solutions/: bytecode.rs  fibonacci.rs  two-chip.rs
src/: efp.rs  extraction.rs  field.rs  lib.rs  utils.rs
src/scroll/: exp_circuit.rs  mod.rs  mul_add.rs  primitive_types.rs  range.rs  table.rs  uint.rs
src/scroll/gadgets/: batched_is_zero.rs  binary_number.rs  mod.rs  util.rs
src/scroll/zkevm_circuits/: keccak_circuit.rs  mod.rs  table.rs  util.rs
src/scroll/zkevm_circuits/evm_circuit/: util.rs
src/scroll/zkevm_circuits/evm_circuit/util/: constraint_builder.rs
src/scroll/zkevm_circuits/keccak_circuit/: cell_manager.rs  dev.rs  keccak_packed_multi.rs  table.rs  util.rs
