[package]
name = "halo2_extr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.6", default-features = false }
ff = "0.13"
halo2_frontend = { git = "https://github.com/privacy-scaling-explorations/halo2.git", features = ["circuit-params", "dev-graph"], tag = "v0.4.0" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", features = ["circuit-params", "dev-graph"], tag = "v0.4.0" }
halo2curves = "0.7.0"
plotters = "0.3.7"
arrayvec = { version = "0.7.2" }
regex = "1"
subtle = { version = "2.5.0" }
num-bigint = { version = "0.4.3" }
proc-macro2 = "1.0.60"
itertools = "0.13.0"
num-traits = "0.2.19"

[[example]]
name = "fibo-table"

[[example]]
name = "lookup"

[[example]]
name = "layout"

[[example]]
name = "table"

# [[example]]
# name = "cond-swap"
